# bugdom_wasm

./: .gitignore  BUILD.md  BUILD_WASM.md  Bugdom.html  Bugdom.js  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  REPO_CLEANUP.md  cmake_install.cmake
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: build-and-push-prebuilt.yml
cmake/: SDL3Config.cmake  emscripten_gl_init_pre.js  emscripten_pre.js  patch_emscripten_gl.sh  patch_emscripten_gl_context.pl
patches/: README.md  pomme-wasm.patch  sdl-emscripten.patch
src/: Boot.cpp
src/Headers/: renderer.h
src/QD3D/: Camera.c  QD3D_Support.c  Renderer.c  gl_compat_emscripten.c  gles3_matrix_upload.h  gles3_rhi.c  gles3_rhi.h
src/System/: MouseSmoothing.c  Objects.c  SDLMaintenance.c
src/Terrain/: SplineItems.c  Terrain.c
test-wasm-env/: CMakeLists.txt  Makefile  README.md  gl_test.c  gl_test.html  gl_test.js  gl_test.wasm  hello.c  hello.data  hello.js  hello.wasm  index.html
tests/: gles_matrix_test.c
